Bug 250778 - Digital Clock Settings' - Country's Holiday cannot be changed.
Summary: Digital Clock Settings' - Country's Holiday cannot be changed.
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-clock (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: John Layt
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-10 13:58 UTC by Michalng
Modified: 2010-10-05 15:24 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michalng 2010-09-10 13:58:41 UTC
Version:           unspecified (using KDE 4.5.0) 
OS:                Linux

1. Bug - 
Digital Clock Settings is unable to retain the preferred setting for Holidays when the setting is set to "Do not show holidays". 

However, when the Holiday is set to a country, e.g. Germany or Sweden, the setting is retained correctly.



2. New Wish
Add holidays for country "Malaysia" and "Singapore", as they are currently not in the list.



Reproducible: Always

Steps to Reproduce:
To repeat the bug, do the following:
-> Digital Clock Settings
-> Calendar
-> Holidays
-> Select "Do not show holidays"
-> Okay


Actual Results:  
Holidays (country) is reset back to the default "United States of America".

Expected Results:  
Holidays (country) should be as what is set as "Do not show holidays" and NOT reset back to the default "United States of America".

openSUSE 11.3 - 2.6.34-12-desktop #1 SMP PREEMPT 2010-06-29 02:39:08 +0200 x86_64 x86_64 x86_64 GNU/Linux

KDE - Platform Version 4.5.1 (KDE 4.5.1)
Comment 1 John Layt 2010-09-13 17:07:30 UTC
Whoops, I'll fix that.  For the new holiday file requests please raise separate requests under kdepimlibs/kholidays and try include links to reliable and/or official sources for the holiday rules and translations.
Comment 2 John Layt 2010-10-05 15:24:53 UTC
SVN commit 1182719 by jlayt:

Fix Plasma Calendar to remember if user selects to not show holidays.

Not to be forward-ported to trunk as trunk will very soon work differently.

BUG: 250778



 M  +9 -1      calendartable.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1182719