Fix Plasma Calendar to remember if user selects to not show holidays.

Not to be forward-ported to trunk as trunk will very soon work differently.

BUG: 250778


svn path=/branches/KDE/4.5/kdebase/workspace/; revision=1182719